@@ -134,7 +134,7 @@ public abstract class ProviderFactory {
                             return c.newInstance(bus);
                         }
                     }
-                    return cls.newInstance();
+                    return cls.getDeclaredConstructor().newInstance();
                 } catch (Throwable ex) {
                     String message = "Problem with creating the provider " + className;
                     if (ex.getMessage() != null) {
@@ -231,7 +231,7 @@ public abstract class ProviderFactory {
                     return c.newInstance(bus);
                 }
             }
-            return cls.newInstance();
+            return cls.getDeclaredConstructor().newInstance();
         } catch (Throwable ex) {
             String message = "Problem with creating the default provider " + className;
             if (ex.getMessage() != null) {
