@@ -44,7 +44,7 @@ import org.apache.cxf.feature.AbstractFeature;
 import org.apache.cxf.interceptor.InterceptorProvider;
 
 
-public class CXFCacheControlFeature extends AbstractFeature {
+public class CXFCacheControlFeature extends AbstractFeature implements AutoCloseable {
     
     private static final String BUS_PROVIDERS = "org.apache.cxf.jaxrs.bus.providers";
     private CachingProvider provider;
@@ -154,7 +154,7 @@ public class CXFCacheControlFeature extends AbstractFeature {
     @SuppressWarnings("unchecked")
     private static <T> T newInstance(final ClassLoader contextClassLoader, final String clazz, final Class<T> cast) {
         try {
-            return (T) contextClassLoader.loadClass(clazz).newInstance();
+            return (T) contextClassLoader.loadClass(clazz).getDeclaredConstructor().newInstance();
         } catch (final Exception e) {
             throw new IllegalArgumentException(e);
         }
