@@ -1608,7 +1608,7 @@ public class WadlGenerator implements ContainerRequestFilter {
             if (jaxbInfo == null) {
                 return null;
             }
-            Object instance = type.newInstance();
+            Object instance = type.getDeclaredConstructor().newInstance();
             return getQNameFromParts(jaxbInfo.getElementLocalName(instance),
                                      jaxbInfo.getElementNamespaceURI(instance), type, clsMap);
         } catch (Exception ex) {
